k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-app
  labels:
    app: python-app
spec:
  replicas: 4
  selector:
    matchLabels:
      app: python-app
  template:
    metadata:
      labels:
        app: python-app
    spec:
      containers:
        - name: pyapp
          image: biswarup007/python-app:8fb060a88f
          ports:
            - containerPort: 8000
