k8s/ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata: 
  name: python-app-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec: 
  ingressClassName: nginx
  rules:
    - host: python-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: 
                name: python-app-service
                port: 
                  number: 80
